# template-python

./: Makefile  README.md  pyproject.toml
tests/: test_main.py
