[project]
name = "template-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "bandit>=1.8.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

